feat(логи): добавил получение логов с фильтрами
